src/snapshots/monkey_rust__eval__tests__eval_array_map.snap
---
source: src/eval.rs
expression: result
---
- Array:
    - Int: 2
    - Int: 4
    - Int: 6
    - Int: 8

