src/snapshots/monkey_rust__eval__tests__eval_builtin_len.snap
---
source: src/eval.rs
expression: result
---
- "0"
- "4"
- "11"
- "expected array or string, found: 1"
- "expected 1 argument, found: 2"

