src/snapshots/monkey_rust__eval__tests__eval_function_call.snap
---
source: src/eval.rs
expression: result
---
- Int: 5
- Int: 5
- Int: 10
- Int: 10
- Int: 20
- Int: 5

