src/snapshots/monkey_rust__eval__tests__eval_function_declaration.snap
---
source: src/eval.rs
expression: result
---
- Function:
    parameters:
      - x
    body:
      - Expression:
          Add:
            lhs:
              Identifier: x
            rhs:
              Literal:
                Int: 2
    env:
      store: {}
      outer: ~

