src/snapshots/monkey_rust__eval__tests__eval_if_expression.snap
---
source: src/eval.rs
expression: result
---
- Int: 10
- Nil
- Int: 10
- Int: 10
- Nil
- Int: 20
- Int: 10

