src/snapshots/monkey_rust__eval__tests__eval_not_expression.snap
---
source: src/eval.rs
expression: result
---
- Bool: false
- Bool: true
- Bool: true
- Bool: false
- Bool: false
- Bool: true
- Bool: true
- Bool: false

