src/snapshots/monkey_rust__eval__tests__eval_return_statement.snap
---
source: src/eval.rs
expression: result
---
- Int: 10
- Int: 10
- Int: 10
- Int: 10
- Int: 10
- Int: 10

